# knowledge-distillation-research

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  README.md  START_HERE.md  pyproject.toml
configs/: README.md  base.example.yaml
data/: README.md
docs/: CONTROLLED_EXPERIMENT_LOG.md  DECISION_LOG.md  ENVIRONMENT_REPORT.md  EXPERIMENT_LOG_TEMPLATE.csv  EXPERIMENT_PROTOCOL_TEMPLATE.md  EXPERIMENT_RECORDING_RULES.md  FAILURE_LOG.md  MNIST_BASELINE_PROTOCOL.md  MNIST_V1_PROJECT_SUMMARY_FINAL.md  MNIST_V1_RESULTS_SUMMARY.md  PAPER_NOTES_TEMPLATE.md  REPRODUCIBILITY_CHECKLIST.md  REPRODUCTION_SCOPE.md  RESEARCH_WORKFLOW.md  TOOL_GUIDE.md  paper_notes_kd_hinton_2015.md
docs/v2_fashion_mnist/: FASHION_MNIST_V2_RESULTS_SUMMARY.md  FASHION_MNIST_V2_SCOPE.md  README.md
docs/v3_cifar10/: CIFAR10_V3_ENHANCEMENTS.md  CIFAR10_V3_RESULTS_SUMMARY.md  CIFAR10_V3_SCOPE.md  README.md  V3_RESEARCH_REFLECTION.md
notebooks/: README.md  mnist_baseline_walkthrough.ipynb  v2_fashion_mnist_data_loader_walkthrough.ipynb
notebooks/v1_mnist/: mnist_baseline_walkthrough.ipynb  mnist_kd_walkthrough.ipynb
results/tables/: mnist_v1_result_summary.csv
scripts/: check_environment.py  check_mnist_data.py  check_student_model.py  check_teacher_model.py  setup.ps1  smoke_test.py  train_mnist_baseline.py  train_mnist_distillation.py  train_mnist_teacher.py  verify_setup.ps1
scripts/v2_fashion_mnist/: check_fashion_mnist_data.py  train_fashion_mnist_baseline.py  train_fashion_mnist_distillation.py  (+2 more)
tests/: test_config.py  test_environment.py  test_imports.py  test_mnist_data.py
(+27 files in other folders)
