[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kd-research"
version = "0.1.0"
description = "Small knowledge distillation reproduction with MNIST teacher-student experiments."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "PyYAML",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
pytorch = ["torch", "torchvision"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
